# balchat

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PRIVACY.md  README.md  SECURITY.md
crates/balchat-cli/: Cargo.toml
crates/balchat-cli/src/: main.rs
crates/balchat-core/: Cargo.toml
crates/balchat-core/src/: conversation.rs  identity.rs  lib.rs  relay_client.rs  transport.rs  wire.rs
crates/balchat-relay/: Cargo.toml
crates/balchat-relay-proto/: Cargo.toml
crates/balchat-relay-proto/src/: lib.rs
crates/balchat-relay/src/: main.rs
crates/balchat-storage/: Cargo.toml
crates/balchat-storage/src/: lib.rs
crates/balchat-tauri/: Cargo.toml  package.json  tauri.conf.json
crates/balchat-tauri/capabilities/: default.json
crates/balchat-tauri/icons/: icon.icns
crates/balchat-tauri/src/: lib.rs  main.rs
crates/balchat-tauri/ui/: index.html  package-lock.json  package.json  vite.config.js
crates/balchat-tauri/ui/src/: App.svelte  main.js
crates/balchat-tauri/ui/src/components/: Avatar.svelte  ChatView.svelte  ContactRow.svelte  Login.svelte  MessageBubble.svelte  Settings.svelte  Sidebar.svelte  StatusPill.svelte
crates/balchat-tauri/ui/src/components/mobile/: MobileChat.svelte  MobileEditContact.svelte  MobileHome.svelte  MobileLogin.svelte  MobileNewContact.svelte  MobileSettings.svelte  MobileShell.svelte
crates/balchat-tauri/ui/src/lib/: avatar.js  format.js  platform.js
crates/balchat-tauri/ui/src/styles/: global.css  mobile.css
crates/spike-mls/: Cargo.toml
crates/spike-mls/src/: main.rs
crates/spike-tor/: Cargo.toml
crates/spike-tor/src/: main.rs
deploy/relay/: README.md  balchat-relay.service  install.sh
docs/: android-multi-abi.md  ios-build.md
fdroid/: README.md  build.sh
fdroid/metadata/: com.balchat.desktop.yml
promo/: README.md  alternativeto.md  awesome-decentralized-pr.md  awesome-rust-pr.md  awesome-tauri-pr.md  awesome-tor-pr.md  izzyondroid-request.md  mastodon.md  privacyguides-discussion.md  reddit-r-privacy.md  reddit-r-rust.md  reddit-r-selfhosted.md  reddit-r-tor.md  show-hn.md
