[package]
name = "balchat-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "balchat"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
rpassword.workspace = true
balchat-core.workspace = true
balchat-storage.workspace = true
openmls.workspace = true
openmls_traits.workspace = true
ciborium.workspace = true
hex = "0.4"
