[package]
name = "balchat-relay"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "balchat-relay"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
futures.workspace = true
rusqlite.workspace = true
balchat-relay-proto.workspace = true
balchat-core.workspace = true
