[package]
name = "balchat-tauri"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "balchat-desktop"
path = "src/main.rs"

# Mobile (Android/iOS) consume `run()` desde el Rust entry point JNI; necesitamos
# crate-type cdylib además del bin de desktop.
[lib]
name = "balchat_mobile"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
tauri-build.workspace = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
ciborium.workspace = true
openmls.workspace = true
openmls_traits.workspace = true

balchat-core.workspace = true
balchat-storage.workspace = true

tauri.workspace = true
tauri-plugin-notification.workspace = true
tauri-plugin-dialog.workspace = true
tauri-plugin-fs.workspace = true

hex = "0.4"
sha2 = "0.10"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
