[package]
name = "spike-mls"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
openmls.workspace = true
openmls_traits.workspace = true
openmls_rust_crypto.workspace = true
openmls_basic_credential.workspace = true
